--- a/tarwescubosflix/src/App.css
+++ b/tarwescubosflix/src/App.css
@@ -140,7 +140,7 @@ section{
     max-width: 955px;    
     grid-template-columns: repeat(auto-fit,minmax(168px,1fr));
 }
-.btgenero{
+/* .btgenero{
 
   width: 168px;
   height: 38px;
@@ -157,73 +157,44 @@ section{
   height: 38px;
   color: var(--rosaMedio);
   cursor: pointer;
+} */
+
+/* ========================== filtro */
+
+.filters {
+    display: flex;
+    gap: 24px;
+    margin-bottom: 24px;
 }
 
-/* ================================= */
-
-.sacola{
-  
-  position: relative;
-  width: 312px;
-  height: 537px;
-  border: solid 2px peachpuff;
-  position: -webkit-sticky;
-  position: fixed;
-  left: 70%;
-  top: 148px;
-  background: rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(15px);
-  text-align: center;
-  
-}
-.topoSacola{
-  display: flex;
-  width: 312px;
-  height: 72px;
-  background: linear-gradient(0deg, #A785ED, #A785ED), #C4C4C4;
-  justify-content: center;
-  align-content: center;
-  
+.filter {
+    all: unset;
+    font-family: 'Open Sans';
+    flex-basis: 168px;
+    box-sizing: border-box;
+    cursor: pointer;
+    display: grid;
+    place-content: center;
+    padding: 5px;
+    background-color: rgba(225, 131, 200, 0.2);
+    opacity: 0.2;
+    border: 2px solid var(--branco);
+    color: var(--branco);
+    text-align: center;
 }
 
-.topoSacola svg{
-  transform: translateY(12px);
+/* muito foda isso aqui */
+.filter:not(.filter--active):hover{
+
+    opacity: 1;
+    border: 2px solid var(--rosa);
+    color: var(--rosa);
+    background: transparent;
+    
 }
 
-.topoSacola p{
-  font-style: normal;
-  line-height: 150%;
-  font-size: 24px;
-  font-weight: bold;
-  color: var(--cinzaClaro);
-}
-.sacolaInput{
-  
-  width: 280px;
-  height: 40px;
-  border: 1px solid var(--branco);
-  background-color: var(--preto2);
-  transform: translateX(16px);
-
-}
-.sacola span{
-  font-size: 12px;
-  line-height: 150%;
-  color: var(--cinzaClaro);
-  margin-right: 60%;
-}
-.sacolaInput
-input{
-  width: 255px;
-  height: 40px;
-  background-color: var(--preto2);
-  border: transparent;
-  font-size: 16px;
-  line-height: 150%;
-  color: #FDFDFD;
-
-}
-.sacolaInput svg{
-  margin-bottom: 10px;
-  
+.filter.filter--active{
+    opacity: 1;
+    border: 2px solid var(--rosa);
+    color: var(--rosa);
 }
